[tool.poetry]
name = "grasplog"
version = "1.0a1"
description = ""
authors = ["Lukas Sembera <1707105+semberal@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
scikit-learn = "^1.0.2"
nltk = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
mypy = "^0.950"

[tool.poetry.scripts]
grasplog = 'grasplog.cli:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
